fix im alignment

--- a/_sass/_common.scss
+++ b/_sass/_common.scss
@@ -106,7 +106,14 @@ nav a {
   margin-bottom: 25px;
   }
 
-.imgcap{
+
+.imgright { float: right; margin-left: 10px; }
+.imgcap img {
+  border: 0px solid #999;
+  max-width: 100%;
+}
+.imgcap {
+  color: #555;
+  font-size: 14px;
   text-align: center;
-  max-width: 800px;
 }
